# ChangeLog for dev-python/pyalsaaudio
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/pyalsaaudio/ChangeLog,v 1.12 2009/07/10 18:45:36 arfrever Exp $

*pyalsaaudio-0.5 (10 Jul 2009)

  10 Jul 2009; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  +pyalsaaudio-0.5.ebuild:
  Version bump.

  31 May 2009; nixnut <nixnut@gentoo.org> pyalsaaudio-0.2.ebuild:
  ppc stable #270738

  21 May 2009; Ferris McCormick <fmccor@gentoo.org> pyalsaaudio-0.4.ebuild:
  Add ~sparc, part of Bug #270738.

*pyalsaaudio-0.4 (02 Feb 2009)

  02 Feb 2009; Patrick Lauer <patrick@gentoo.org> +pyalsaaudio-0.4.ebuild:
  Bump to 0.4. Fixes #254912

  30 Aug 2008; Brent Baude <ranger@gentoo.org> pyalsaaudio-0.2.ebuild:
  Marking pyalsaaudio-0.2 ~ppc for bug 236057

  12 Mar 2008; Christian Heim <phreak@gentoo.org> metadata.xml:
  Removing Marien Zwart (marienz, #107204) from metadata.xml.

*pyalsaaudio-0.3 (28 Feb 2008)

  28 Feb 2008; Tiziano Müller <dev-zero@gentoo.org>
  +pyalsaaudio-0.3.ebuild:
  Version bump (bug #210251).

  15 Nov 2007; Samuli Suominen <drac@gentoo.org> pyalsaaudio-0.2.ebuild:
  amd64 stable wrt #197514

  30 Jun 2007; Jim Ramsay <lack@gentoo.org> pyalsaaudio-0.2.ebuild:
  Adding ~amd64 keyword

  20 Nov 2006; Christian Faulhammer <opfer@gentoo.org>
  pyalsaaudio-0.2.ebuild:
  stable x86, bug #155521

*pyalsaaudio-0.2 (02 Oct 2006)

  02 Oct 2006; Marien Zwart <marienz@gentoo.org> +metadata.xml,
  +pyalsaaudio-0.2.ebuild:
  New package, simplified version of an ebuild from James Kirkham. Closes bug
  #114526.
