@@ -1,6 +1,9 @@
 # Copyright 1999-2009 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/pyalsaaudio/Attic/pyalsaaudio-0.5.ebuild,v 1.1 2009/07/10 18:45:36 arfrever Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/pyalsaaudio/Attic/pyalsaaudio-0.5.ebuild,v 1.2 2009/08/25 16:09:18 arfrever Exp $
+
+EAPI="2"
+SUPPORT_PYTHON_ABIS="1"
 
 inherit distutils
 
