@@ -1,6 +1,10 @@
 # ChangeLog for dev-python/pyalsaaudio
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/pyalsaaudio/ChangeLog,v 1.12 2009/07/10 18:45:36 arfrever Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/pyalsaaudio/ChangeLog,v 1.13 2009/08/25 16:09:18 arfrever Exp $
+
+  25 Aug 2009; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
+  pyalsaaudio-0.5.ebuild:
+  Set SUPPORT_PYTHON_ABIS.
 
 *pyalsaaudio-0.5 (10 Jul 2009)
 
